--- a/src/pages/admin/InvoicesPage/invoicesPage.scss
+++ b/src/pages/admin/InvoicesPage/invoicesPage.scss
@@ -1,12 +1,11 @@
 .invoices-page {
   padding: 20px;
   height: 100%;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
   color: #fff;
-  position: fixed;
   margin-top: 30px;
 }
 
@@ -27,18 +26,16 @@
   display: flex;
   gap: 8px;
 
-  input {
-    width: 260px;
-    padding: 8px 10px;
-    border-radius: 4px;
-    border: 1px solid #444;
-    background: #111;
-    color: #fff;
-    outline: none;
+  width: 260px;
+  padding: 14px 12px;
+  border-radius: 4px;
+  border: 1px solid #444;
+  background: #111;
+  color: #fff;
+  outline: none;
 
-    &::placeholder {
-      color: #777;
-    }
+  &::placeholder {
+    color: #777;
   }
 
   button {
@@ -56,7 +53,7 @@
   }
 }
 
-.wpsmall{
+.wpsmall {
   width: 20px;
   height: 20px;
   margin-right: 8px;
@@ -64,7 +61,7 @@
 
 /* TABLE */
 .table-wrapper {
-//   flex: 1;
+  flex: 1;
   overflow-y: auto;
   border-radius: 6px;
 }
@@ -81,13 +78,14 @@
 
   th,
   td {
+    width: 21%;
     letter-spacing: 2px;
-    padding: 12px;
+    padding: 10px;
     text-align: left;
+    vertical-align: middle;
     border-bottom: 1px solid #222;
     font-size: 18px;
   }
-
 
   th {
     color: #aaa;
@@ -125,7 +123,7 @@
   gap: 16px;
   margin-top: 16px;
   padding: 12px 0;
-margin-top: 20px;
+  margin-top: 20px;
   border-top: 1px solid gray;
 }
 
@@ -138,7 +136,7 @@ margin-top: 20px;
 
 /* BUTTONS */
 .pagination button {
-    margin-top: 20px;
+  margin-top: 20px;
   padding: 6px 14px;
   font-size: 18px;
   font-weight: 500;
@@ -147,7 +145,9 @@ margin-top: 20px;
   border: none;
   border-radius: 4%;
   cursor: pointer;
-  transition: background 0.2s ease, opacity 0.2s ease;
+  transition:
+    background 0.2s ease,
+    opacity 0.2s ease;
 }
 
 /* HOVER */
