--- a/src/pages/admin/AdminServices/servicesPanel.scss
+++ b/src/pages/admin/AdminServices/servicesPanel.scss
@@ -134,7 +134,7 @@
   display: flex;
   height: 2vw;
   gap: 10px;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
 
   input {
     flex: 1;
@@ -156,7 +156,7 @@
     border: none;
     color: #000;
     font-weight: 600;
-    padding: 8px 16px;
+    padding: 5px 16px;
     border-radius: 6px;
     cursor: pointer;
 
